--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbot-trader",
-  "version": "1.2.28-beta1",
+  "version": "1.2.28-beta2",
   "author": {
     "name": "George",
     "email": "gbot-trader@mail.ru"
@@ -35,8 +35,8 @@
   ],
   "license": "Shareware",
   "engines": {
-    "node": ">=8.7.0",
-    "npm": ">=5.5.1"
+    "node": "8.9.0",
+    "npm": "5.5.1"
   },
   "private": true,
   "dependencies": {
